--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,14 +1,26 @@
+
 <!-- <p>edit-sahil works!</p> -->
 <!-- <p>profile-sahil works!</p> -->
-<div class="sidebar">
-  <img class="img3" src="..\assets\b494ahn2td2ykcqak6hr_1-removebg-preview 1.png" alt="img"
-    style="width:150px;height:40px;">
+<!-- <app-navbar-after-home-page  [navtheme]="'whitetheme'"></app-navbar-after-home-page> -->
+<!-- <app-navbar-after-home-page [navtheme]="'whitetheme'"></app-navbar-after-home-page> -->
+<!-- <app-nav-bar-after-home-profile  [navtheme]="'whitetheme'"></app-nav-bar-after-home-profile> -->
+<!-- <app-navbar></app-navbar> -->
 
-  <ul>
-    <li style="margin-top: 60px;"> <img src="..\assets\Home.png" alt="Icon 1" style="width:20px;height:12px;"> <a
-        href="#">Home</a></li>
-    <li style="margin-top: 15px;"><img src="..\assets\Vector.png" alt="Icon 1" style="width:20px;height:12px;"> <a
-        routerLink="/main-profile" href="#">Profile</a></li>
+
+<app-nav-bar-after-home-profile  [navtheme]="'whitetheme'"></app-nav-bar-after-home-profile> 
+
+<!-- <div class="sidebar">
+   <img class="img3" src="..\assets\b494ahn2td2ykcqak6hr_1-removebg-preview 1.png" alt="img"
+    style="width:150px;height:40px;"> 
+
+  <ul class="ul1">
+     <li style="margin-top: 60px;"> <img src="..\assets\Home.png" alt="Icon 1" style="width:20px;height:12px;"> <a
+        href="#">Home</a></li> 
+        <li style="margin-top: 15px; border-radius: 0px 5px 5px 0px;
+        opacity: 0.2;
+        background: linear-gradient(90deg, #DB2423 48.95%, rgba(255, 255, 255, 0.171) 91.25%);
+        "><img src="..\assets\Profiles.png" alt="Icon 1" style="width:20px;height:15px;"><a 
+               href = "#" routerLink="/main-profile">Profile</a></li>
     <li style="margin-top: 15px;"><img src="..\assets\security-user.png" alt="Icon 1" style="width:20px;height:15px;">
       <a href="#">RM Homepage</a></li>
     <li style="margin-top: 15px;"><img src="..\assets\Ticket.png" alt="Icon 1" style="width:20px;height:15px;"> <a
@@ -23,12 +35,12 @@
         routerLink="/profile-settings" href="#">Settings</a></li>
 
   </ul>
-</div>
+</div> -->
 <nav>
   <div class="div1">
     <!-- <h5><img src="..\assets\profile2.png" alt="Icon 1" style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;"> Profile</h5><a href="#"class="a1">Change Password</a> -->
     <div class="nav-spacing">
-      <button type="button" class="btn btn-outline-light text-dark pro-btn" (click)="navigateToProfile()"><img
+      <button type="button" class="btn btn-outline-light text-dark pro-btn"[style.background-color]="clicked1 ? '#db232359':'white'" [style.background-color]="clicked1 ? '#db232359':'white'" [style.border-color]="clicked1 ? 'red':'white'" (click)="navigateToProfile()"><img
           src="..\assets\profile2.png" alt="Icon 1"
           style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Profile</button>
       <button type="button" class="btn btn-outline-light text-dark set-btn" (click)="navigateToAccountSettings()"><img
@@ -42,32 +54,32 @@
       <form>
       <div class="div4" >
         
-          <div class="form-group row">
+          <div class="form-group row label-input">
             <label for="staticEmail"  class="col-sm-2 col-form-label">Name:</label>
             <div class="col-sm-10">
-              <input #name type="text" class="form-control" id="staticEmail" placeholder="User Name" formControlName="username">
+              <input #name type="text" class="form-control userinputfield"  placeholder="User Name" >
             </div>
           </div>
           <br><br>
-          <div class="form-group row">
+          <div class="form-group row label-input">
             <label for="inputPassword" class="col-sm-2 col-form-label">Email:</label>
             <div class="col-sm-10">
-              <input #email type="text" class="form-control" id="inputPassword" placeholder="xyz123@gmail.com" formControlName="email">
+              <input #email type="text" class="form-control userinputfield"  placeholder="xyz123@gmail.com" >
             </div>
           </div>
           <br><br>
-          <div class="form-group row">
+          <div class="form-group row label-input">
             <label for="inputPassword" class="col-sm-2 col-form-label">Phone<br> Number:</label>
             <div class="col-sm-10">
-              <input #phoneNumber type="text" class="form-control" id="inputPassword" placeholder="(908) 234-1611" formControlName="number">
+              <input #phoneNumber type="text" class="form-control userphoneinput"  placeholder="(908) 234-1611" >
             </div>
           </div>
           <br><br>
-          <div class="form-group row">
+          <div class="form-group row label-input2">
             <label for="inputPassword" class="col-sm-2 col-form-label">Address:</label>
             <div class="col-sm-10">
-              <input #address type="text" class="form-control" id="inputPassword"
-                placeholder="St Bernards Rd Gladstone New Mexico 07934" formControlName="address">
+              <input #address type="text" class="form-control userinputfield" 
+                placeholder="St Bernards Rd Gladstone New Mexico 07934" >
             </div>
           </div>
         
@@ -79,7 +91,7 @@
         <img class="img1" src="..\assets\BOY 2.png" alt="img" style="width:170px;height:190px;">
         <!-- <img src = "..\assets\Group 1000006833.png" alt="img"> -->
       </div>
-      <!-- <p-toast position="bottom-center" key="bc"></p-toast> -->
+      <p-toast position="bottom-center" key="bc"></p-toast> 
       <button  type="submit" (click)="showBottomCenter(name.value,email.value,address.value,phoneNumber.value)" label="Show" class="btn1 btn btn-danger ">Save</button>
       <button type="button" (click)="resetForm()" class="btn2 btn btn-outline-danger ">Cancel</button>
       <!-- <button type="button" class="btn btn-outline-danger">Danger</button> -->
