--- a/src/app/main-profile/main-profile.component.html
+++ b/src/app/main-profile/main-profile.component.html
@@ -1,100 +1,105 @@
 <!-- <p>profile-sahil works!</p> -->
-<app-navbar-after-home-page [navtheme]="'whitetheme'"></app-navbar-after-home-page>
-<div class="sidebar">
-    <img class="img3" src="..\assets\b494ahn2td2ykcqak6hr_1-removebg-preview 1.png" alt="img"
-        style="width:150px;height:40px;">
-
-    <ul>
-        <li style="margin-top: 60px;"> <img src="..\assets\Home.png" alt="Icon 1" style="width:20px;height:12px;"> <a
-                href="#">Home</a></li>
-        <!-- <li style="margin-top: 15px;"><img src="..\assets\Vector.png" alt="Icon 1" style="width:20px;height:12px;"> <a routerLink="/profile-sahil"href="#">Profile</a></li> -->
-        <li style="margin-top: 15px; border-radius: 0px 5px 5px 0px;
-        opacity: 0.2;
-        background: linear-gradient(90deg, #DB2423 48.95%, rgba(255, 255, 255, 0.171) 91.25%);
-        "><img src="..\assets\Setting.png" alt="Icon 1" style="width:20px;height:15px;"><a routerLink="/main-profile"
-                href="#">Profile</a></li>
-        <li style="margin-top: 15px;"><img src="..\assets\security-user.png" alt="Icon 1"
-                style="width:20px;height:15px;"> <a href="#">RM Homepage</a></li>
-        <li style="margin-top: 15px;"><img src="..\assets\Ticket.png" alt="Icon 1" style="width:20px;height:15px;"> <a
-                href="#">Messages</a></li>
-        <li style="margin-top: 15px;"><img src="..\assets\Document.png" alt="Icon 1" style="width:20px;height:15px;"> <a
-                href="#">Purchases</a></li>
-        <li style="margin-top: 15px;"><img src="..\assets\Calendar.png" alt="Icon 1" style="width:20px;height:15px;"> <a
-                href="#">Returns</a></li>
-        <li style="margin-top: 15px;"><img src="..\assets\Activity.png" alt="Icon 1" style="width:20px;height:15px;"> <a
-                href="#">Gallery</a></li>
-        <li style="margin-top: 15px;"><img src="..\assets\Setting.png" alt="Icon 1" style="width:20px;height:15px;"><a
-                routerLink="/profile-settings" href="#">Settings</a></li>
-
-    </ul>
-</div>
-
-<nav>
-    <div class="div1">
-        <!-- <h5><img src="..\assets\profile2.png" alt="Icon 1" style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Profile</h5><a  href="#"class="a1">Change Password</a> -->
-        <!-- <router-outlet></router-outlet> -->
-        <div class="nav-spacing">
-            <button type="button" class="btn btn-outline-light text-dark pro-btn" (click)="navigateToProfile()"><img
-                    src="..\assets\profile2.png" alt="Icon 1"
-                    style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Profile</button>
-            <button type="button" class="btn btn-outline-light text-dark set-btn"
-                (click)="navigateToAccountSettings()"><img src="..\assets\Setting2.png" alt="Icon 1"
-                    style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Account Settings</button>
-        </div>
-        <a href="#" class="a1">Change Password</a>
-    </div>
-    <div class="divs">
-        <div class="div2" [formGroup]="userForm" (ngSubmit)="onSubmit()" action="" >
-            <form >
-                <div class="div4">
-                    <!-- <form class="form-floating">
-                        <input type="email" class="form-control" id="floatingInputValue" placeholder="User Name">
-                        <label for="floatingInputValue">Input with value</label>
-                        <br>
-                        <input type="email" class="form-control" id="floatingInputValue" placeholder="xyz123@gmail.com" >
-                        <label for="floatingInputValue">Input with value</label>
-                        <br>
-                        <input type="email" class="form-control" id="floatingInputValue" placeholder="(908) 234-1611" >
-                        <label for="floatingInputValue">Input with value</label>
-                        <br>
-                        <input type="email" class="form-control" id="floatingInputValue" placeholder="St Bernards Rd Gladstone New Mexico 07934" >
-                        <label for="floatingInputValue">Input with value</label>
-                      </form> -->
-                    <div class="form-floating mb-3" *ngFor="let user of arr">
-                        <input  type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">User Name</label> 
-                        <!-- <label for="floatingInput">{{user.name}}</label> -->
-                    </div>
-                    <div class="form-floating mb-3" *ngFor="let user of arr">
-                        <input  type="email" class="form-control" id="floatingPassword" placeholder="Password" required>
-                        <label for="floatingPassword">Email</label>
-                        <!-- <label for="floatingPassword">{{user.email}}</label> -->
-                    </div>
-                    <div class="form-floating mb-3 number-input" *ngFor="let user of arr">
-                        <input  type="text" class="form-control" id="floatingPassword" placeholder="Password" required>
-                        <label for="floatingPassword">Phone No</label>
-                        <!-- <label for="floatingPassword">{{user.phone}}</label> -->
-                    </div>
-                    <div class="form-floating mb-3" *ngFor="let user of arr">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password" required>
-                        <label for="floatingPassword">Address</label>
-                        <label for="floatingPassword">{{user.address}}</label>
-                    </div>
-                </div>
-            </form>
-
-            <div class="div3">
-                <img class="img2" src="..\assets\Group.png" alt="img" style="width:20px;height:20px;"><br>
-
-                <img class="img1" src="..\assets\BOY 2.png" alt="img" style="width:170px;height:190px;">
-                <!-- <img src = "..\assets\Group 1000006833.png" alt="img"> -->
-            </div>
-
-            <button type="button" class="btn1 btn btn-danger " (click)="navigateToEditProfile() "><img class="img4"
-                    src="..\assets\edit-2.png" alt="Icon 1" style="width:15px;height:18px;">Edit Profile</button>
-            <!-- routerlink="edit-sahil" -->
-        </div>
-    </div>
-
-
-</nav>
+<!-- <app-navbar-after-home-page  [navtheme]="'whitetheme'"></app-navbar-after-home-page> -->
+ <!-- <app-nav-bar-after-home-profile  [navtheme]="'whitetheme'"></app-nav-bar-after-home-profile>  -->
+ <app-nav-bar-after-home-profile [navtheme]="'whitetheme'"></app-nav-bar-after-home-profile>
+ <!-- <app-navbar-after-home-page></app-navbar-after-home-page> -->
+ <!-- <div class="sidebar">
+     <img class="img3" src="..\assets\b494ahn2td2ykcqak6hr_1-removebg-preview 1.png" alt="img"
+         style="width:150px;height:40px;">
+ 
+     <ul class="ul1">
+          <li style="margin-top: 60px;"> <img src="..\assets\Home.png" alt="Icon 1" style="width:20px;height:12px;"> <a
+             href = "#" >Home</a></li> 
+          <li style="margin-top: 15px;"><img src="..\assets\Vector.png" alt="Icon 1" style="width:20px;height:12px;"> <a routerLink="/profile-sahil"href="#">Profile</a></li> 
+         <li style="margin-top: 15px; border-radius: 0px 5px 5px 0px;
+         opacity: 0.2;
+         background: linear-gradient(90deg, #DB2423 48.95%, rgba(255, 255, 255, 0.171) 91.25%);
+         "><img src="..\assets\Profiles.png" alt="Icon 1" style="width:20px;height:15px;"><a 
+                href = "#" routerLink="/main-profile">Profile</a></li>
+         <li style="margin-top: 15px;"><img src="..\assets\security-user.png" alt="Icon 1"
+                 style="width:20px;height:15px;"> <a href = "#">RM Homepage</a></li>
+         <li style="margin-top: 15px;"><img src="..\assets\Ticket.png" alt="Icon 1" style="width:20px;height:15px;"> <a
+             href = "#"  >Messages</a></li>
+         <li style="margin-top: 15px;"><img src="..\assets\Document.png" alt="Icon 1" style="width:20px;height:15px;"> <a
+             href = "#"    >Purchases</a></li>
+         <li style="margin-top: 15px;"><img src="..\assets\Calendar.png" alt="Icon 1" style="width:20px;height:15px;"> <a
+             href = "#" >Returns</a></li>
+         <li style="margin-top: 15px;"><img src="..\assets\Activity.png" alt="Icon 1" style="width:20px;height:15px;"> <a
+             href = "#" >Gallery</a></li>
+         <li style="margin-top: 15px;"><img src="..\assets\Setting.png" alt="Icon 1" style="width:20px;height:15px;"><a
+                 href = "#"routerLink="/profile-settings" >Settings</a></li>
+ 
+     </ul>
+ </div> -->
+ 
+ <nav class="nav">
+     <div class="div1">
+         <!-- <h5><img src="..\assets\profile2.png" alt="Icon 1" style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Profile</h5><a  href="#"class="a1">Change Password</a> -->
+         <!-- <router-outlet></router-outlet> -->
+         <div class="nav-spacing">
+             <button type="button" class="btn btn-outline-light text-dark pro-btn" [style.background-color]="clicked1 ? '#db232359':'white'" [style.background-color]="clicked1 ? '#db232359':'white'" [style.border-color]="clicked1 ? 'red':'white'"(click)="navigateToProfile()"><img
+                     src="..\assets\profile2.png" alt="Icon 1"
+                     style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Profile</button>
+             <button type="button" class="btn btn-outline-light text-dark set-btn" [style.background-color]="clicked2 ? '#db232359':'white'"
+                 (click)="navigateToAccountSettings()"><img src="..\assets\Setting2.png" alt="Icon 1"
+                     style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Account Settings</button>
+         </div>
+         <a  class="a1">Change Password</a>
+     </div>
+     <div class="divs">
+         <div class="div2" [formGroup]="userForm" (ngSubmit)="onSubmit()" action="" >
+             <form >
+                 <div class="div4">
+                  
+                     <div class="container">
+                         <div class="did-floating-label-content label-input">
+                           <input class="did-floating-input " type="text" placeholder="User Name">
+                           <label class="did-floating-label">Name</label>
+                         </div>
+                         <div class="did-floating-label-content label-input">
+                             <input class="did-floating-input" type="text" placeholder="xyz123@gmail.com">
+                             <label class="did-floating-label">Email</label>
+                           </div>
+                           <div class="did-floating-label-content label-input">
+                             <input class="did-floating-input" type="text" placeholder="(908) 234-1611">
+                             <label class="did-floating-label">Phone Number</label>
+                           </div>
+                           <div class="did-floating-label-content label-input">
+                             <input class="did-floating-input" type="text" placeholder="St Bernards Rd Gladstone New Mexico 07934">
+                             <label class="did-floating-label">Address</label>
+                           </div>
+                          
+                     </div>
+                     <!--<div class="form-floating mb-3" *ngFor="let user of arr">
+                         <input  type="email" class="form-control" id="floatingPassword" placeholder="Password" required>
+                         <label for="floatingPassword">Email</label>
+                         <label for="floatingPassword">{{user.email}}</label> 
+                     </div>
+                     <div class="form-floating mb-3 number-input" *ngFor="let user of arr">
+                         <input  type="text" class="form-control" id="floatingPassword" placeholder="Password" required>
+                         <label for="floatingPassword">Phone No</label>
+                          <label for="floatingPassword">{{user.phone}}</label> 
+                     </div>
+                     <div class="form-floating mb-3" *ngFor="let user of arr">
+                         <input type="text" class="form-control" id="floatingPassword" placeholder="Password" required>
+                         <label for="floatingPassword">Address</label>
+                          <label for="floatingPassword">{{user.address}}</label>
+                     </div>-->
+                 </div>
+             </form>
+ 
+             <div class="div3">
+                 <img class="img2" src="..\assets\Group.png" alt="img" style="width:20px;height:20px;"><br>
+ 
+                 <img class="img1" src="..\assets\BOY 2.png" alt="img" style="width:170px;height:190px;">
+                 <!-- <img src = "..\assets\Group 1000006833.png" alt="img"> -->
+             </div>
+ 
+             <button type="button" class="btn1 btn btn-danger " (click)="navigateToEditProfile() "><img class="img4"
+                     src="..\assets\edit-2.png" alt="Icon 1" style="width:15px;height:18px;">Edit Profile</button>
+             <!-- routerlink="edit-sahil" -->
+         </div>
+     </div>
+ 
+ 
+ </nav>
