--- a/src/app/afternavbar/afternavbar.component.html
+++ b/src/app/afternavbar/afternavbar.component.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/home" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" routerLink="/home" aria-current="page" href="#">Dashboard</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">About Us</a>
