--- a/src/app/rm-homepage/rm-homepage.component.scss
+++ b/src/app/rm-homepage/rm-homepage.component.scss
@@ -577,7 +577,7 @@ input[type="range"]::-webkit-slider-runnable-track {
   border: solid rgba(0, 0, 0, 0.16);
   border-radius: 58px;
   width: 9.3rem;
-  text-align: right;
+  text-align: center;
 }
 
 
