--- a/src/app/rm-homepage/rm-homepage.component.html
+++ b/src/app/rm-homepage/rm-homepage.component.html
@@ -3,7 +3,7 @@
 <app-navbar-after-home-page [navtheme]="'blacktheme'"></app-navbar-after-home-page>
 <app-homepage-upper></app-homepage-upper>
 <!-- <h1>working</h1> -->
-<div class="card-container">
+<div class="card-container dropdown">
   <div class="card first-card" style="width: 18rem">
     <img src="./assets/info-background.png" class="card-img-top" alt="..." />
     <div class="card-body first-card-text">
