--- a/src/app/home-page-after/home-page-after.component.html
+++ b/src/app/home-page-after/home-page-after.component.html
@@ -45,7 +45,7 @@
       </div> -->
       <app-navbar-after-home-page  [navtheme]="'blacktheme'"></app-navbar-after-home-page>
       <div class="backgroundImage">
-        <app-navbar-after-home-page [navtheme]="'blacktheme'"></app-navbar-after-home-page>
+        <!-- <app-navbar-after-home-page [navtheme]="'blacktheme'"></app-navbar-after-home-page> -->
 
         <div style="padding-top: 50px;">
     
