--- a/src/app/home-page-after/home-page-after.component.scss
+++ b/src/app/home-page-after/home-page-after.component.scss
@@ -588,13 +588,18 @@
 
 .brandNameText {
 
-    font-size: 10.5rem;
-
+   font-size: 10.5rem;
     margin: 0 auto;
-
     text-align: center;
-
     color: rgba(255, 255, 255, 0.28);
+    color: rgba(255, 255, 255, 0.1);
+    font-family: Monts;
+    font-size: 12rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 5rem;
+    text-transform: uppercase;
 
 }
 
