--- a/src/app/forgot/forgot.component.scss
+++ b/src/app/forgot/forgot.component.scss
@@ -464,79 +464,45 @@ margin-bottom: -60px;
   padding: 1px 20px;
 
   background: #fff;
-
-  border-color: black;
-
-  border: 1px solid black;
-
+  border-color: rgb(129, 122, 122);
+  border: 1px solid rgba(99, 95, 95, 0.5);
   border-radius: 7px;
-
   box-sizing: border-box;
-
   outline: none;
-
- 
-
  ~ .did-floating-label{
-
       top:-8px;
-
        font-size:13px;
-
  }
 
 }
 
 select.did-floating-select {
-
   -webkit-appearance: none;
-
     -moz-appearance: none;
-
     appearance: none;
-
- 
-
 }
 select.did-floating-select::-ms-expand {
-
   display: none;
-
 }
 .did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
-
   top:-8px;
-
   font-size:13px;
-
 }
 
  
 
 .did-floating-select:not([value=""]):valid ~ .did-floating-label {
-
   top:-8px;
-
   font-size:13px;
-
 }
 .did-floating-select[value=""]:focus ~ .did-floating-label {
-
   top:11px;
-
   font-size:13px;
-
- 
-
 }
-
 .did-floating-select:not([multiple]):not([size]) {
-
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='6' viewBox='0 0 8 6'%3E%3Cpath id='Path_1' data-name='Path 1' d='M371,294l4,6,4-6Z' transform='translate(-371 -294)' fill='%23003d71'/%3E%3C/svg%3E%0A");
-
     background-position: right 15px top 50%;
-
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; 
 }
 .did-error-input{
 
