--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -157,8 +157,8 @@ font-family:  'Inter'  ;
   height: 43px;
   padding: 1px 20px;
   background: #fff;  
-  border-color: rgb(25, 24, 24);
-  border: 1px solid rgb(33, 33, 33);
+  border-color: rgb(129, 122, 122);
+  border: 1px solid rgba(99, 95, 95, 0.5);
   border-radius: 7px;
   box-sizing: border-box;
   outline: none;
