--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -54,7 +54,7 @@
           <label class="form-check-label termscon" for="exampleCheck1"> I agree to Terms & Conditions</label>
         </div>
         <p-toast position="top-center" key="tc"></p-toast>
-        <button type="button" pButton pRipple (click)="onSubmit()" label="Get Started" class=" started btn p-button-success"></button>
+        <button type="button" pButton pRipple (click)="onSubmit()" label="Get Started1" class=" started btn p-button-success"></button>
         <!-- <button pButton pRipple type="button" class="started btn" (click)="onSubmit()">Get Started</button> -->
 
 
