--- a/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.html
+++ b/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.html
@@ -13,7 +13,7 @@
            -->
             <ul class="ul1">
               <li style="margin-top: 25px;"> <img src="..\assets\Home.png" alt="Icon 1" style="width:20px;height:12px;"> <a
-                 class="anchor">Dashboard</a></li>
+                 class="anchor" (click)="redirect('work-space')">Dashboard</a></li>
               <li style="margin-top: 20px;"><img src="../../assets/Profiles.png" alt="Icon 1" style="width:20px;height:12px;"> 
                 <!-- routerLink="/main-profile"  -->
                 <a class="anchor" (click)="redirect('main-profile')">Profile</a></li>
