--- a/src/app/navbar-after-home-page/navbar-after-home-page.component.html
+++ b/src/app/navbar-after-home-page/navbar-after-home-page.component.html
@@ -48,7 +48,7 @@
 
         <li class="nav-item">
 
-          <a class="nav-link active" routerLink="/work-space" aria-current="page" [style.color]="txtcolor">Dashboard</a>
+          <a class="nav-link active" routerLink="/rm-home-page" aria-current="page" [style.color]="txtcolor">Home</a>
 
         </li>
 
