--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.scss
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.scss
@@ -71,7 +71,7 @@
 
 .smallblock{
     display: flex; 
-    background-color: rgb(207, 201, 201);
+    background-color: rgb(247 245 245);
     padding: 5px 10px;
     border-radius: 10px;
     font-size: small;
