--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -423,6 +423,14 @@ hr {
     margin: 0 auto;
     text-align: center;
     color: rgba(255, 255, 255, 0.28);
+    color: rgba(255, 255, 255, 0.1);
+    font-family: Monts;
+    font-size: 12rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 5rem;
+    text-transform: uppercase;
 }
 
 // .firstDiv{
