--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -19,8 +19,8 @@
 }
 
 :host ::ng-deep .p-toast {
-  background-color: #eff7f1 ;
-  color:#0d0e0d; 
+  background-color: #070707 ;
+  color:#ffffff; 
   // border-radius: 0.5rem;
   width: 20rem;
 
