nav bar close issue fixed

--- a/src/app/rm-homepage/homepage-upper/homepage-upper.component.html
+++ b/src/app/rm-homepage/homepage-upper/homepage-upper.component.html
@@ -1,3 +1,4 @@
+<app-navbar-after-home-page [navtheme]="'blacktheme'"></app-navbar-after-home-page>
 <div (click)="close()">
     <div class="backgroundImage" (click)="close()">
         <div style="padding-top: 50px;">
