--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -419,16 +419,26 @@ hr {
 }
 
 .brandNameText {
-    font-size: 10.5rem;
+   font-size: 10.5rem;
     margin: 0 auto;
     text-align: center;
+    // color: rgba(255, 255, 255, 0.28);
+    // color: rgba(255, 255, 255, 0.1);
     color: rgba(255, 255, 255, 0.28);
+    font-family: Monts;
+    font-size: 12rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 4rem;
+    text-transform: uppercase;
 }
 
 // .firstDiv{
 //     width: 100%; height: 100%; padding: 25px; opacity: 0.70; background: rgba(15, 15, 15, 0.17); border-radius: 20px; overflow: hidden; backdrop-filter: blur(80px); justify-content: flex-start; align-items: flex-start; gap: 20px; display: inline-flex;
 // }
 .firstDiv {
+    margin-top: -2rem;
     width: 560px;
     height: 25%;
     padding: 25px 25px 25px 40px;
@@ -536,7 +546,7 @@ hr {
     // margin-left: auto;
     position: absolute;
     right: 0px;
-    margin-top: -50px;
+    margin-top: -8rem;
     opacity: 0.5;
 }
 
@@ -619,7 +629,7 @@ hr {
     // flex-direction: column; /* Arrange children in a column */
     justify-content: flex-start;
     align-items: flex-start;
-    margin-top: -27px;
+    margin-top: -7rem;
 }
 
 // .threeDivSecond{
