--- a/src/app/workspace/workspace.component.html
+++ b/src/app/workspace/workspace.component.html
@@ -1,19 +1,55 @@
+<div>
+    <app-navbar-after-home-page [navtheme]="'whitetheme'"></app-navbar-after-home-page>
+    <div style="padding: 0px 60px; padding-top: 90px;">
+        <div class="ws-white-card">
+            <ul>
+                <li class="activeli"><img src="../../assets/logos/Category.png">Dashboard</li>
+                <li><img src="../../assets/logos/person.png">Profile</li>
+                <li><img src="../../assets/logos/security-user.png">RM Homepage</li>
+                <li><img src="../../assets/logos/message.png">Messages</li>
+                <li><img src="../../assets/logos/Document.png">Purchases</li>
+                <li><img src="../../assets/logos/card_giftcard.png">Returns</li>
+                <li><img src="../../assets/logos/perm_media.png">Gallery</li>
+                <li><img src="../../assets/logos/Setting.png">Settings</li>
+            </ul>
+        </div>
+        <div class="ws-black-card mt-3">
+            <p class="ws-bc-head">DashBoard Overview</p>
+            <p class="ws-bc-name">Hello John <img src="../../assets/logos/image1783.png"></p>
+            <div style="display:flex; gap:80px">
+                <app-spinner></app-spinner>
+            <app-spinner1></app-spinner1>
+            <app-spinner2></app-spinner2>
 
-<app-navbar-after-home-page [navtheme]="'whitetheme'"></app-navbar-after-home-page>
-<div style="margin: 0px 65px; padding-top: 90px;">
-    <div class="ws-black-card">
-        <p class="ws-bc-head">DashBoard Overview</p>
-        <p class="ws-bc-name">Hello John <img src="../../assets/logos/image 1783.png"></p>
-    </div>
-    <div class="ws-grid-card">
-        <ag-grid-angular
-    style="width: 100%; height: 100%;"
-    class="ag-theme-alpine"
-    [rowData]="rowData$ | async"
-    [columnDefs]="columnDefs"
-    [defaultColDef]="defaultColDef">
-</ag-grid-angular>
+            </div>
+            
+        </div>
+        <div class="ws-grid-card">
+            <div style="display: flex; justify-content: space-between;">
+                <p class="gridhead">All Tasks</p>
+                <form class="d-flex" role="search">
+                    <div class="input-group "
+                        style="border-radius: 5px; border:solid 1px rgb(205, 194, 194); width:25rem; height: 30px;">
+                        <button class="btn" type="submit" style="margin:0; height: 10px;"><i class="fa-solid fa-magnifying-glass" style="font-size: 12px; margin-top:-1rem; padding-top:-1rem;"></i></button>
+                        <input class="form-control form-control-sm border border-0 pt-0 pb-0" type="search" placeholder="Search" aria-label="Search"
+                        style="font-size: 12px;">
+                    </div>
+                </form>
+                <div>
+                    <div class="input-group "
+                        style="border-radius: 5px; border:solid 1px rgb(204, 194, 194); width:25rem; height: 30px;">
+                        <button class="btn" type="submit" style="margin:0; height: 10px; font-size: 11px;">Sort by:</button>
+                        <input class="form-control form-control-sm border border-0 pt-0 pb-0" type="search" placeholder="Newest" aria-label="Search"
+                        style="font-size: 12px;">
+                    </div>
+                </div>
+            </div>
+            
+            
+            <ag-grid-angular style="width: 100%; height: 100%;" class="ag-theme-alpine" [rowData]="rowData$ | async"
+                [columnDefs]="columnDefs" [defaultColDef]="defaultColDef">
+            </ag-grid-angular>
 
+        </div>
     </div>
-    
 </div>
