--- a/src/app/workspace/workspace.component.scss
+++ b/src/app/workspace/workspace.component.scss
@@ -1,7 +1,45 @@
+.ws-white-card{
+    border: solid 0.5px rgb(238, 238, 238);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    float: left;
+    width: 13rem;
+    height: 47.1rem;
+    border-radius: 15px;
+    padding: 40px 0px;
+}
+
+.ws-white-card ul{
+    padding-left: 0;
+
+}
+
+.ws-white-card li{
+    list-style-type: none;
+    margin-bottom: 10px;
+    padding: 8px 0px;
+    padding-left: 40px;
+    font-family: "Montserrat";
+    color: black;
+    font-weight: 600;
+    font-size: 11px;
+    
+}
+
+.activeli, .ws-white-card li:hover{
+    background: rgb(255,208,208);
+    background: linear-gradient(90deg, rgb(249, 216, 216) 8%, rgba(251,232,232,1) 42%, rgba(255,255,255,1) 90%);
+    color: rgb(167, 0, 0) !important;
+}
+
+.ws-white-card img{
+    margin-top: -2.5px;
+    margin-right: 10px;
+    height: 15px;
+}
 
 .ws-black-card{
     border: solid 1px black;
-    width: 62rem;
+    width: 62.2rem;
     height:22rem;
     border-radius: 10px;
     background-image: url(../../assets/workspace.jpg);
@@ -25,18 +63,18 @@
 
 .ws-bc-head{
     font-family: "Inter";
-    font-weight: bold;
+    font-weight: '1000';
     color: #D9D9D9;
     font-size: 25px;
 }
 
 .ws-grid-card{
-    border: solid 2px black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 62rem;
     height:24rem;
     border-radius: 10px;
     background-color: #F4F6FB;
-    padding: 2.5rem 1rem;
+    padding: 1.5rem 1rem;
     float: right;
     overflow: hidden;
 }
@@ -51,6 +89,14 @@
     --ag-foreground-color: rgb(0, 0, 0);
     --ag-borders: none;
     --ag-font-size: 13px;
-
   }
+
+.gridhead{
+    margin-left: 10px;
+    width: max-content;
+    font-weight: 500;
+    // font-family: "Montserrat";
+    padding: 0px 10px 5px 10px;
+    border-bottom: solid 3px #DB2423;
+}
 
