boy 2 images edit and main profile

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -88,7 +88,7 @@
       <div class="div3">
         <img class="img2" src="..\assets\Group.png" alt="img" style="width:20px;height:20px;"><br>
 
-        <img class="img1" src="..\assets\BOY 2.png" alt="img" style="width:170px;height:190px;">
+        <img class="img1" src="../../assets/BOY2.png" alt="img" style="width:170px;height:190px;">
         <!-- <img src = "..\assets\Group 1000006833.png" alt="img"> -->
       </div>
       <p-toast position="top-center" key="tc"></p-toast> 
