--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -15,8 +15,8 @@
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div id="demo"></div>
-                        <!-- <img src="../../assets/car1.png" class="d-block w-100" alt="..."> -->
+                        <!-- <div id="demo"></div> -->
+                        <img src="../../assets/car1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="../../assets/car2.png" class="d-block w-100" alt="...">
