good night guys

--- a/src/app/newpass/newpass.component.html
+++ b/src/app/newpass/newpass.component.html
@@ -36,8 +36,8 @@
 
 </div>
 
-<button type="submit" (click)="redirect('user/login')" class="started btn" style="font-family: 'Monts';">Confirm</button>
-
+<button type="submit" (click)="onSubmit()" class="started btn" style="font-family: 'Monts';">Confirm</button>
+<div id="alertContainer" class="top-center-alert"></div>
 </form>
 
   </div>
