--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -53,11 +53,12 @@
           <input type="checkbox" class="form-check-input" id="exampleCheck1" formControlName="termsAndConditions">
           <label class="form-check-label termscon" for="exampleCheck1"> I agree to Terms & Conditions</label>
         </div>
-        <p-toast position="top-center" key="tc"></p-toast>
-        <button type="button" pButton pRipple (click)="onSubmit()" label="Get Started1" class=" started btn p-button-success"></button>
-        <!-- <button pButton pRipple type="button" class="started btn" (click)="onSubmit()">Get Started</button> -->
-
-
+     
+        <!-- <p-toast position="top-center" key="tc"></p-toast> -->
+        <button type="submit" class=" started btn" style="font-family: 'Monts';">Get Started</button>
+        <div id="alertContainer" class="top-center-alert"></div>
+        
+        <!-- <button pButton pRipple type="button"  (click)="onSubmit()">Get Started</button> -->
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-5">
@@ -88,4 +89,5 @@
     </form>
   </div>
 </div>
+
 <!-- <router-outlet></router-outlet> -->
