--- a/src/app/varification-login/varification-login.component.html
+++ b/src/app/varification-login/varification-login.component.html
@@ -35,8 +35,8 @@
                 <p>If you didn't receive a code, <span><a class="resend-text" href="">Resend</a></span></p>
 
             </div>
-            <p-toast position="top-center" key="tc"></p-toast>
-            <button type="button" pbutton pRipple (click)="onSubmit()"  class="started btn p-button-success" label="Verify" (click)="onSubmit()">Verify</button>
+            
+            <button type="button" (click)="onSubmit()"  class="started btn ">Verify</button>
 
             <div class="container">
 
