--- a/src/app/varification-login/varification-login.component.scss
+++ b/src/app/varification-login/varification-login.component.scss
@@ -110,7 +110,7 @@
 .childclass2 span {
 
     font-size: 0.65rem;
-    font-family: Monts;
+    font-family: 'Monts';
     padding: bottom 100px;
 
 }
@@ -129,7 +129,7 @@
 
     line-height: 1.5rem;
 
-    font-family: 'Aps-montserrat';
+    font-family: 'Monts';
 
     color: #757575;
 
@@ -145,7 +145,7 @@
 
     font-size: 0.7rem;
 
-    font-family: Monts;
+    font-family: 'Monts';
     font-weight: 600;
     padding-top: 1rem;
 
@@ -182,7 +182,7 @@
 
     font-size: 0.7rem;
 
-    font-family: Monts;
+    font-family: 'Monts';
 
     color: #616161;
 
@@ -210,7 +210,7 @@
 
     text-align: center;
 
-    font-family: 'Aps-montserrat';
+    font-family: 'Monts';
 
     font-size: 12.8px;
 
@@ -406,7 +406,7 @@ h1 {
 
     color: #444;
 
-    font-family: Monts;
+    font-family: 'Monts';
 
     font-size: 0.8rem;
 
@@ -432,7 +432,7 @@ h1 {
 
     color: #ABABAB;
 
-    font-family: Monts;
+    font-family: 'Monts';
 
     font-size: 0.7rem;
 
@@ -448,7 +448,7 @@ h1 {
 
     color: #E85C4D;
     text-decoration: none;
-    font-family: Monts;
+    font-family: 'Monts';
 
     font-size: 0.7rem;
 
