--- a/src/app/newpass/newpass.component.scss
+++ b/src/app/newpass/newpass.component.scss
@@ -16,6 +16,157 @@
 .row-2 {
   padding-top: 1%;
 }
+.container1{
+  width: 319px;
+  height: 100px;
+  padding: 0px;
+  margin: 2px auto;
+  font-family: 'Monts';
+  margin-top: 3rem;
+  font-weight: 400;
+}
+
+
+.did-floating-label-content {
+  // font-size: 101px;
+  // font-size: 100rem;
+  position:relative;
+  margin-bottom:21px;
+}
+
+.did-floating-label {
+  color:rgb(10, 10, 10);
+  // font-size:100px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  height: 2.1rem;
+  left:15px;
+  margin-top: -0.5rem;
+  // top:20px;
+  // padding-top: 100S?rem;
+  padding:3px 4px;
+  background:#ffffff;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+
+.did-floating-input, .did-floating-select {
+  font-size: 12px;
+  display: flex;
+  width: 98%;
+  height: 45px;
+  padding: 1px 20px;
+  background: #faf7f7;  
+  border-color: rgb(129, 122, 122);
+  border: 1px solid rgba(99, 95, 95, 0.5);
+  border-radius: 7px;
+  box-sizing: border-box;
+  outline: none;
+
+ ~ .did-floating-label{
+      top:-18px;
+       font-size:12px;
+ }
+}
+
+select.did-floating-select {
+  -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+}
+
+select.did-floating-select::-ms-expand {
+  display: none;
+}
+
+
+
+.did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
+  top:-8px;
+  font-size:12px;
+}
+
+.did-floating-select:not([value=""]):valid ~ .did-floating-label {
+  top:-8px;
+  font-size:12px;
+}
+
+.did-floating-select[value=""]:focus ~ .did-floating-label {
+  top:11px;
+  font-size:12px;
+
+}
+
+.did-floating-select:not([multiple]):not([size]) {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='6' viewBox='0 0 8 6'%3E%3Cpath id='Path_1' data-name='Path 1' d='M371,294l4,6,4-6Z' transform='translate(-371 -294)' fill='%23003d71'/%3E%3C/svg%3E%0A");
+    background-position: right 15px top 50%;
+    background-repeat: no-repeat;
+
+}
+
+.did-error-input{
+  .did-floating-input, .did-floating-select {
+    border: 2px solid #9d3b3b;
+    color:#0e0d0d;
+  }
+
+  .did-floating-label{
+    font-weight: 400;
+    color:#060606;
+  }
+
+  .did-floating-select:not([multiple]):not([size]) {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='6' viewBox='0 0 8 6'%3E%3Cpath id='Path_1' data-name='Path 1' d='M371,294l4,6,4-6Z' transform='translate(-371 -294)' fill='%239d3b3b'/%3E%3C/svg%3E%0A");
+
+}
+
+}
+
+// .input-group {
+  // display: flex;
+  // .did-floating-input{
+    // border-radius:0 2px 2px 0;
+    // border-left:0;
+    // padding-left:0;
+  // }
+
+
+
+.input-group-append {
+  display:flex;
+  align-items:center;
+}
+
+.input-group-text {
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    height:40px;
+    color: #323840;
+    padding: 0 5px 0 20px;
+    font-size:12px;
+    font-family:'Monts' ;
+   text-align: center;
+    white-space: nowrap;
+    border: 1px solid #3D85D8;
+  // border-radius: 2px 0 0 2px;
+  // border-right:none;
+
+}
+.top-center-alert {
+  position: fixed;
+  top: 0%;
+  left: 48%;
+  width: 18rem;
+  font-size: small;
+  transform: translateX(-50%);
+  z-index: 9999;
+  text-align: center;
+  // padding-left: 5rem;
+}
 .childclass1 {
   // position: relative;
   width: 50rem;
@@ -84,32 +235,25 @@ font-family: 'ZenKakuGothicAntique';
 .form-group {
 
   line-height: 3rem;
-
-  font-family: 'Aps-Montserrat';
+  font-family: 'Monts';
   font-weight: bold;
   color: #444444;
-
   font-size: 0.7rem;
-
 }
 
 
 
 .started{
-
   background-color: #DB2423;
-
-  font-family: 'Aps-Montserrat';
-
+  font-family: 'Monts';
   color: white;
-
   font-size: 75%;
 
   padding-top: 0.5rem;
 
   padding-bottom: 0.5rem;
 
-  margin-top: 8%;
+  margin-top: 30%;
 
   width: 100%;
 
@@ -125,7 +269,7 @@ text-align: center;
 
   color: #444;
 
-  font-family: 'Aps-Montserrat';
+  font-family: 'Monts';
 
   font-size: 18px;
 
