--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -17,21 +17,42 @@
 .row-2 {
   padding-top: 1%;
 }
+  // :host ::ng-deep .ui-toast {
+  //   background-color: #5ff545; /* Background color for the toast */
+  //   color: #fff; /* Text color for the toast */
+  //   border: none; /* Remove border */
+  //   box-shadow: 0 2px 4px rgba(13, 210, 19, 0.2); /* Add a subtle box-shadow */
+  //   max-width: 300px; /* Set a maximum width for the toast */
+  // }
+// .started.btn.p-button-success {
+//   background-color: #4CAF50; /* Background color for the button */
+//   color: #fff; /* Text color for the button */
+//   border: none; /* Remove button border */
+//   padding: 10px 20px; /* Adjust padding as needed */
+//   cursor: pointer; /* Add pointer cursor on hover */
+//   border-radius: 5px; /* Add rounded corners */
+// }
 
-:host ::ng-deep .p-toast {
-  background-color: #070707 ;
-  color:#ffffff; 
-  // border-radius: 0.5rem;
-  width: 20rem;
-
-}
+// .started.btn.p-button-success:hover {
+//   background-color: #45a049; /* Change button color on hover */
+// }
 
 .childclass1 {
   position: relative;
   width: 50rem;
   margin-left: 2rem;
 }
-
+.top-center-alert {
+  position: fixed;
+  top: 0%;
+  left: 48%;
+  width: 18rem;
+  font-size: small;
+  transform: translateX(-50%);
+  z-index: 9999;
+  text-align: center;
+  // padding-left: 5rem;
+}
 .logoimg {
   height: 22rem;
   display: flex;
@@ -61,7 +82,6 @@ font-family: 'ZenKakuGothicAntique';
   height: 8px;
 }
 
- 
 
 .childclass2 {
   margin-top: 5%;
@@ -170,7 +190,7 @@ font-family:  'Inter'  ;
   outline: none;
  ~ .did-floating-label{
       top:-8px;
-       font-size:13px;
+       font-size:12px;
  }
 }
 select.did-floating-select {
