--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -91,7 +91,7 @@
         <img class="img1" src="../../assets/BOY2.png" alt="img" style="width:170px;height:190px;">
         <!-- <img src = "..\assets\Group 1000006833.png" alt="img"> -->
       </div>
-      <p-toast position="top-center" key="tc"></p-toast> 
+      <p-toast position="bottom-center" key="bc"></p-toast> 
       <button  type="submit" (click)="showBottomCenter(name.value,email.value,address.value,phoneNumber.value)" label="Show" class="btn1 btn btn-danger ">Save</button>
       <button type="button" (click)="resetForm()" class="btn2 btn btn-outline-danger ">Cancel</button>
       <!-- <button type="button" class="btn btn-outline-danger">Danger</button> -->
