--- a/src/app/edit-profile/edit-profile.component.scss
+++ b/src/app/edit-profile/edit-profile.component.scss
@@ -8,7 +8,7 @@
     display: flex;
 }
 :host ::ng-deep .p-toast {
-    background-color: #f1f5f2 ;
+    background-color: #6eca85 ;
     color:#090808; 
     // border-radius: 0.5rem;
     width: 20rem;
