--- a/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.scss
+++ b/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.scss
@@ -13,6 +13,46 @@
     background-color: aqua;
     background-color: white;
 }
+.notibar, .profilebar{
+    display: flex;
+    position: absolute;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 2px;
+    border: solid 1px rgb(224, 220, 220);
+    color: black;
+    height: fit-content;
+    font-size: 15px;
+    padding: 10px 0;
+    z-index: 1;
+}
+
+.drop{
+    list-style-type: none;
+    margin-left: -10px;
+}
+
+.drop i{
+    padding-right: 10px;
+}
+
+.drop li{
+    padding-bottom: 10px;
+}
+
+.notibar{
+    margin-top: 25px;
+    margin-left: -9rem;
+    width: 15rem;
+}
+
+.profilebar{
+    margin-top: 25px;
+    margin-left: 0rem;
+    width: 12rem;
+}
+
+
 
 
 .sidebar{
