--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -257,8 +257,8 @@
         <i></i>
         <h6 class="redtxt" style="font-size: 13px;">View Benefits</h6>
     </div>
-    <div class="cs-footer-com">
-        <button class="btn">Apply Now</button>
+    <div class="cs-footer-com" (click)="redirect('apply-now')">
+        <button href="car-sub-submit" class="btn">Apply Now</button>
     </div>
 
 </div>
