--- a/src/app/main-profile/main-profile.component.html
+++ b/src/app/main-profile/main-profile.component.html
@@ -44,7 +44,7 @@
                  (click)="navigateToAccountSettings()"><img src="..\assets\Setting2.png" alt="Icon 1"
                      style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Account Settings</button>
          </div>
-         <a  class="a1">Change Password</a>
+         <a  href="#" class="a1">Change Password</a>
      </div>
      <div class="divs">
          <div class="div2" [formGroup]="userForm" (ngSubmit)="onSubmit()" action="" >
