--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,6 +1,6 @@
 <div class="frame">
 		<div class="circle-big">
-			<div class="text">Active Customer<div class="small">631</div>
+			<div class="text">Active<br>Customer<div class="small">631</div>
 			</div>
 			<svg>
 				<circle class="bg" cx="57" cy="57" r="52"></circle>
