--- a/src/app/profile-settings/profile-settings.component.html
+++ b/src/app/profile-settings/profile-settings.component.html
@@ -30,8 +30,7 @@
         <button type="button" class="btn btn-outline-light text-dark pro-btn" (click)="navigateToProfile()"><img src="..\assets\profile2.png" alt="Icon 1" style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Profile</button>
         <button type="button" class="btn btn-outline-light text-dark set-btn" [style.background-color]="clicked1 ? '#db232359':'white'" [style.border-color]="clicked1 ? 'red':'white'"(click)="navigateToAccountSettings()" ><img src="..\assets\Setting2.png" alt="Icon 1" style="width:20px;height:15px; margin-bottom: 3px; margin-right: 7px;">Account Settings</button>
         </div>
-        <a  href="#"class="a1">Change Password</a> 
-
+        <a  href="newPass"class="a1">Change Password</a> 
     </div>
 </nav>
 <div class="main">
@@ -52,8 +51,10 @@
                 <a  class="anchor"[style.color]="clicked4 ? 'black':'red'"(click)="disableclick()">Disable</a>
 
             </div>
-                <p-toast position="bottom-center" key="bc"></p-toast> 
+               
                 <button type="button" class="btn1 btn btn-danger " (click)="showBottomCenter()">Save</button>
+                <div id="alertContainer" class="top-center-alert"></div>
+
                 <button type="button" class="btn2 btn btn-outline-danger " (click)="navigateToProfile()">Cancel</button>
                 <!-- <button type="button" class="btn btn-outline-danger">Danger</button> -->
             </div>
