--- a/src/app/edit-profile/edit-profile.component.scss
+++ b/src/app/edit-profile/edit-profile.component.scss
@@ -22,6 +22,17 @@ h5{
     margin-left: 50px;
     display: inline;
 }
+.top-center-alert {
+    position: fixed;
+    top: 0%;
+    left: 48%;
+    width: 18rem;
+    font-size: small;
+    transform: translateX(-50%);
+    z-index: 9999;
+    text-align: center;
+    // padding-left: 5rem;
+  }
 .a1{
     margin-left: 450px;
     color:red;
