--- a/src/app/newpass/newpass.component.scss
+++ b/src/app/newpass/newpass.component.scss
@@ -26,7 +26,9 @@
   font-weight: 400;
 }
 
-
+input.did-floating-input {
+  margin-top: 3rem;
+}
 .did-floating-label-content {
   // font-size: 101px;
   // font-size: 100rem;
@@ -247,15 +249,13 @@ font-family: 'ZenKakuGothicAntique';
   background-color: #DB2423;
   font-family: 'Monts';
   color: white;
-  font-size: 75%;
-
-  padding-top: 0.5rem;
-
-  padding-bottom: 0.5rem;
-
-  margin-top: 30%;
-
-  width: 100%;
+  font-size: 78%;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 20%;
+  margin-left: 2.2rem;
+  width: 80%;
+ 
 
 }
 
