refresh on submit issue fixed

--- a/src/app/newpass/newpass.component.html
+++ b/src/app/newpass/newpass.component.html
@@ -38,7 +38,7 @@
 
 </div>
 
-<button type="submit" (click)="onSubmit()" class="started btn" style="font-family: 'Monts';">Confirm</button>
+<button type="submit" (click)="onSubmit($event)" class="started btn" style="font-family: 'Monts';">Confirm</button>
 <div id="alertContainer" class="top-center-alert"></div>
 </form>
 
