--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -16,13 +16,13 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <!-- <div id="demo"></div> -->
-                        <img src="../../assets/car1.png" class="d-block w-100" alt="...">
+                        <img src="../../assets/Toyota-Fortuner-110120211829 2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../assets/car2.png" class="d-block w-100" alt="...">
+                        <img src="../../assets/Toyota-Fortuner-Interior 1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../assets/car3.png" class="d-block w-100" alt="...">
+                        <img src="../../assets/toyota_fortuner_29 1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="../../assets/car4.png" class="d-block w-100" alt="...">
@@ -31,15 +31,15 @@
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1">
-                        <img src="../../assets/car1.png" class="d-block w-100" alt="...">
+                        <img src="../../assets/Toyota-Fortuner-110120211829 2.png" class="d-block w-100" alt="...">
                     </button>
                     <button id="middle1" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                         aria-label="Slide 2">
-                        <img src="../../assets/car2.png" class="d-block w-100" alt="...">
+                        <img src="../../assets/Toyota-Fortuner-Interior 1.png" class="d-block w-100" alt="...">
                     </button>
                     <button id="middle2" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3">
-                        <img src="../../assets/car3.png" class="d-block w-100" alt="...">
+                        <img src="../../assets/toyota_fortuner_29 1.png" class="d-block w-100" alt="...">
                     </button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                         aria-label="Slide 4">
@@ -51,8 +51,8 @@
             <div class="leftcard my-3">
                 <div style="display: flex; justify-content: space-between; ">
                     <div>
-                        <h2>Nissan Maxima Platinum 2022</h2>
-                        <p class="mb-4">Engine Capacity 3.5 L/213 &bull; Diesel &bull; Manual</p>
+                        <h2>2023 Toyota Fortuner</h2>
+                        <p class="mb-4">Engine Capacity 3.5 L/213 · Diesel · Manual </p>
                     </div>
                     <div style="text-align: center;">
                         <i style="font-size: 30px;" class="fa-regular fa-heart"></i>
