--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,7 +3,7 @@
   <div class="childclass1">
     <img class="logoimg"
       src="https://s3-alpha-sig.figma.com/img/c259/7a8d/7f9091727584b82529cb60ae7e5e7c81?Expires=1696809600&Signature=BrXvYQjujd7hPBC58a89qabnssdYSVSPRr8x0nHaUKW9X7CiKTkWixkLxSffm2jNnEet45eQHQo5jA8144I7BAqvZtntOS5f4DiDwdb5lnhV-x42IRh3aSj8pk55vPGdx7qWez7VMmGZRRKdgmp5e-R5GEWOB5ZqbCmqq04ds6FsqScnjkfx73ltc1I7ju7RMpjB6MX72M5wkmKmaUjFwPBDY8I8eM9OsRT2ql9F6f1aLpEv8yjVe3kYsc6~t5OVg4l73oNUOeyXkbIMrYJww2roTisTsZSNBLmUrFP5mmw2g04YMVcnfiZ~fwoBoNJpVLJt0CLOnHpap~XL7n9Hjw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4">
-    <div class="subchild1">
+    <div class="subchild1 w-full">
       <h1>Building the Future...</h1>
       <p>Lorem ipsum dolor sit amet,
         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -12,34 +12,34 @@
       </div>
     </div>
   </div>
-  <div class="childclass2 ">
+  <div class="childclass2 w-full ">
     <p>LETS GET YOU STARTED</p>
     <h3>Create an Account</h3>
     <form [formGroup]="register" (ngSubmit)="onSubmit()">
-      <div class="form-group container1">
-        <div class="did-floating-label-content label-input">
+      <div class="form-group container1 w-full">
+        <div class="did-floating-label-content label-input w-full">
           <input class="did-floating-input " formControlName="fname" type="text" placeholder="FirstName">
           <label class="did-floating-label" style="font-size: -0.3rem;">FirstName<span
               class="required-asterisk">*</span></label>
         </div>
-        <div class="did-floating-label-content label-input">
+        <div class="did-floating-label-content label-input w-full">
           <input class="did-floating-input " formControlName="lname" type="text" placeholder="LastName">
           <label class="did-floating-label" style="font-size: -0.3rem;">LastName<span
               class="required-asterisk">*</span></label>
         </div>
-        <div class="did-floating-label-content label-input">
+        <div class="did-floating-label-content label-input w-full">
           <input class="did-floating-input " formControlName="email" type="email" placeholder="Email">
           <label class="did-floating-label" style="font-size: -0.3rem;">Email<span
               class="required-asterisk">*</span></label>
         </div>
-        <div class="did-floating-label-content label-input">
+        <div class="did-floating-label-content label-input w-full">
           <input class="did-floating-input " formControlName="password" type="password"
             placeholder="Atleast 8 characters">
           <label class="did-floating-label" style="font-size: -0.3rem;">Password<span
               class="required-asterisk">*</span></label>
         </div>
 
-        <div class="did-floating-label-content label-input">
+        <div class="did-floating-label-content label-input w-full">
           <input class="did-floating-input " formControlName="password" type="password"
             placeholder="Atleast 8 characters">
           <label class="did-floating-label" style="font-size: -0.3rem;">ConfirmPassword<span
@@ -55,7 +55,7 @@
         </div>
      
         <!-- <p-toast position="top-center" key="tc"></p-toast> -->
-        <button type="submit" class=" started btn" style="font-family: 'Monts';">Get Started</button>
+        <button type="submit" class=" started btn w-full" style="font-family: 'Monts';">Get Started</button>
         <div id="alertContainer" class="top-center-alert"></div>
         
         <!-- <button pButton pRipple type="button"  (click)="onSubmit()">Get Started</button> -->
