--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -84,15 +84,15 @@
                 <div class="card card-timeline border-0">
                     <ul class="bs4-order-tracking">
                         <li class="step">
-                            <div><i class="fa-solid fa-circle-dot" style="color: #db0000; font-size: 16px;"></i></div>
+                            <div style="padding-top: 2px;"><i class="fa-solid fa-circle-dot" style="color: #db0000; font-size: 16px;"></i></div>
                             <p class="activestep" style="margin-left: 30px;">Build Car</p>
                         </li>
                         <li class="step">
-                            <div><i class="fa-solid fa-2" style="color: gray;"></i></div>
+                            <div style="padding-top: 2px;"><i class="fa-solid fa-circle-dot" style="color: #544c4c; font-size: 16px;"></i></div>
                             <p style="margin-left: 22px;">Personal Info</p>
                         </li>
                         <li class="step">
-                            <div><i class="fa-solid fa-3" style="color: gray;"></i></div>
+                            <div style="padding-top: 2px;"><i class="fa-solid fa-circle-dot" style="color: #544c4c; font-size: 16px;"></i></div>
                             <p style="margin-left: 32px;">Payment</p>
                         </li>
                     </ul>
