--- a/src/app/car-subs/car-subs.component.scss
+++ b/src/app/car-subs/car-subs.component.scss
@@ -184,6 +184,10 @@ img {
     border: solid 6px #ffffff; 
 }
 
+.step li{
+    padding: 0;
+}
+
 .step p{
     background-color: #e9e4e4;
     width: max-content;
