--- a/src/app/spinner/spinner.component.scss
+++ b/src/app/spinner/spinner.component.scss
@@ -17,13 +17,13 @@
 .circle-big .bg {
   fill: none;
   stroke-width: 10px;
-  stroke: #343035;
+  stroke: #350607;
 }
 
 .circle-big .progress {
   fill: none;
   stroke-width: 10px;
-  stroke: #FF5172;
+  stroke: #FF2A52;
   stroke-linecap: round;
   stroke-dasharray: 326.56;
   stroke-dashoffset: 60;
@@ -34,7 +34,7 @@
 
 .circle-big .text {
   position: absolute;
-  color: #FF5172;
+  color: #FF2A52;
   width: 100%;
   top: 25px;
   font-size: 11px;
@@ -48,7 +48,7 @@
 .circle-big .text .small {
   margin-top: 12px;
   font-size: 22px;
-  color: #FF5172;
+  color: #FF2A52;
 }
 
 
