--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
@@ -34,7 +34,7 @@
                                 <p>Electric</p>
                             </div>
                         </div>
-                        <button class="buybtn btn btn-white">Buy Now</button>
+                        <button class="buybtn btn btn-white">Select</button>
                     </div>
                 </div>
                 <div class="car-card" *ngIf="i == 1"  (click)="redirect('car-sub')">
