--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -25,8 +25,10 @@
 }
 
 .loginBtn{
-    width: 180px;
-    background-color: #DB2423;
+    width: 100px;
+    margin-left: 0.5rem;
+    margin-right: 0rem;
+    background-color: #db232300;
     color: white;
     font-family: "Inter";
 }
