--- a/src/app/workspace/workspace.component.scss
+++ b/src/app/workspace/workspace.component.scss
@@ -23,6 +23,7 @@
     color: rgb(255, 255, 255);
     font-weight: 600;
     font-size: 11px;
+    cursor: pointer;
 }
 
 .activeli, .ws-white-card li:hover{
