--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -6,9 +6,9 @@
         <img src="../../assets/logos/Vector.png">
         <p>POPULAR CARS</p>
         <img src="../../assets/logos/Vector.png">
-        <p>NISSAN CARS</p>
+        <p>TOYOTA CARS</p>
         <img src="../../assets/logos/Vector.png">
-        <p>NISSAN MAXIMA PLATINUM 2022</p>
+        <p>2023 Toyota Fortuner</p>
     </div>
     <div class="bodyclass">
         <div>
