--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.html
@@ -6,9 +6,9 @@
         <button>Exclusive Car</button>
     </div>
     <div class="home-card-sec">
-        <div class="collec-cards" >
-            <div   *ngFor="let car of carDetails; let i = index">
-                <div *ngIf="i != 1"  class="car-card">
+        <div class="collec-cards">
+            <div *ngFor="let car of carDetails; let i = index">
+                <div *ngIf="i != 1" class="car-card">
                     <img src={{car.imgUrl}}>
                     <div class="container">
                         <div class="cardhead">
@@ -18,26 +18,30 @@
                         <h4 style="font-family: Montserrat; font-weight:bold; color: #ED5434;">$ {{car.price}}</h4>
                         <div class="smallblock">
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/speedometer-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/speedometer-01.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>4,000</p>
                             </div>
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/manual-gearbox.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/manual-gearbox.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>Auto</p>
                             </div>
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/users-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/users-01.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>4 Person</p>
                             </div>
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/gas-station.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/gas-station.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>Electric</p>
                             </div>
                         </div>
                         <button class="buybtn btn btn-white">Select</button>
                     </div>
                 </div>
-                <div class="car-card" *ngIf="i == 1"  (click)="redirect('car-sub')">
+                <div class="car-card" *ngIf="i == 1" (click)="redirect('car-sub')">
                     <img src={{car.imgUrl}}>
                     <div class="container">
                         <div class="cardhead">
@@ -47,19 +51,23 @@
                         <h4 style="font-family: Montserrat; font-weight:bold; color: #ED5434;">$ {{car.price}}</h4>
                         <div class="smallblock">
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/speedometer-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/speedometer-01.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>4,000</p>
                             </div>
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/manual-gearbox.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/manual-gearbox.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>Auto</p>
                             </div>
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/users-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/users-01.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>4 Person</p>
                             </div>
                             <div class="smallsubblock text-center">
-                                <img src="../../../assets/gas-station.png" style="height: 15px; width: auto; margin-bottom: 0;">
+                                <img src="../../../assets/gas-station.png"
+                                    style="height: 15px; width: auto; margin-bottom: 0;">
                                 <p>Electric</p>
                             </div>
                         </div>
@@ -71,5 +79,3 @@
     </div>
 
 </div>
-
-
